--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@storybook/addon-essentials": "^6.5.0-beta.1",
     "@storybook/addon-interactions": "^6.5.0-beta.1",
     "@storybook/addon-links": "^6.5.0-beta.1",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-vite": "^0.1.30",
     "@storybook/react": "^6.5.0-beta.1",
     "@storybook/testing-library": "^0.0.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.5",
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
     "vite-dts": "^1.0.4"
