--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -33,6 +34,8 @@
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.12",
+    "scss": "^0.2.4",
+    "storybook-addon-sass-postcss": "^0.1.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
